remodified index.js to allow the server to fetch images in the 'Assets' folder

--- a/views/Templates/footer.ejs
+++ b/views/Templates/footer.ejs
@@ -2,7 +2,7 @@
     <div class="container py-5">
       <div class="row py-4">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-            <img src="../Assests/logo.jpg" alt="Logo de la SNCF"></img>
+            <img src="/logo.jpg" alt="Logo de la SNCF"/></img>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
           <h6 class="text-uppercase font-weight-bold mb-4">Pages</h6>
