--- a/views/Templates/header.ejs
+++ b/views/Templates/header.ejs
@@ -19,7 +19,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-        <a class="navbar-brand" href="#">Rail Wars</a>
+        <a class="navbar-brand" href="/">Rail Wars</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,13 +27,13 @@
           <ul class="navbar-nav ml-auto">
             
             <li class="nav-item">
-                <a class="nav-link" href="#">Accueil</a>
+                <a class="nav-link" href="/map" role="button">Accueil</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Historique</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign in/Sign up</a>
+              <a class="nav-link" href="/sign" role="button">Sign in/Sign up</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
