--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -7,10 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Rails | Home</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Rails | Sign in/ Sign up</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
@@ -19,43 +17,43 @@
 
     <div class="container">
       <div class="row centered-form">
-        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Inscrivez-vous ...</h3>
+        <div class="col-xs-12 col-sm-8 col-md-4 offset-sm-2 offset-md-4">
+          <div class="card ">
+            <div class="card-header">
+              <h3 class="card-header">Inscrivez-vous ...</h3>
             </div>
-            <div class="panel-body">
+            <div class="card-block">
               <form role="form">
                 <div class="row">
                   <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
-                      <input type="text" name="first_name" id="first_name" class="form-control input-sm"
+                      <input type="text" name="first_name" id="first_name" class="form-control form-control-sm"
                         placeholder="First Name">
                     </div>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
-                      <input type="text" name="last_name" id="last_name" class="form-control input-sm"
+                      <input type="text" name="last_name" id="last_name" class="form-control form-control-sm"
                         placeholder="Last Name">
                     </div>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                  <input type="email" name="email" id="email" class="form-control form-control-sm" placeholder="Email Address">
                 </div>
 
                 <div class="row">
                   <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
-                      <input type="password" name="password" id="password" class="form-control input-sm"
+                      <input type="password" name="password" id="password" class="form-control form-control-sm"
                         placeholder="Password">
                     </div>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
                       <input type="password" name="password_confirmation" id="password_confirmation"
-                        class="form-control input-sm" placeholder="Confirm Password">
+                        class="form-control form-control-sm" placeholder="Confirm Password">
                     </div>
                   </div>
                 </div>
@@ -64,17 +62,17 @@
 
               </form>
             </div>
-            <div class="panel-heading">
-              <h3 class="panel-title">... Connectez-vous</h3>
+            <div class="card-header">
+              <h3 class="card-header">... Connectez-vous</h3>
             </div>
-            <div class="panel-body">
+            <div class="card-block">
               <form role="form">
                 <div class="form-group">
-                  <input type="email" name="email" id="user_email" class="form-control input-sm"
+                  <input type="email" name="email" id="user_email" class="form-control form-control-sm"
                     placeholder="Email Address">
                 </div>
                 <div class="form-group">
-                  <input type="password" name="password" id="user_password" class="form-control input-sm"
+                  <input type="password" name="password" id="user_password" class="form-control form-control-sm"
                     placeholder="Password">
                 </div>
 
