--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -1,3 +1,64 @@
 <%- include ("header") %>
 
-<%- include ("footer") %>
+    <body>
+        <div id="map">
+            <!-- Ici s'affichera la carte -->
+        </div>
+        <div class="container">
+            <div class="row centered-form">
+                <div class="col-xs-12 col-sm-8 col-md-4 offset-sm-2 offset-md-4">
+                    <div class="card ">
+                        <div class="card-header">
+                            <h3 class="card-header">Où allez-vous ?</h3>
+                        </div>
+                        <div class="card-block">
+                            <form role="form">
+                                <div class="form-group">
+                                    <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
+                                        class="form-control form-control-sm" placeholder="Départ...">
+                                </div>
+                                <div class="form-group">
+                                    <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
+                                        class="form-control form-control-sm" placeholder="Arrivée...">
+                                </div>
+
+                                <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search">
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Fichiers Javascript -->
+        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+            crossorigin=""></script>
+        <script type="text/javascript">
+            // On initialise la latitude et la longitude de Paris (centre de la carte)
+            var lat = 48.852969;
+            var lon = 2.349903;
+            var macarte = null;
+            // Fonction d'initialisation de la carte
+            function initMap() {
+                // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
+                macarte = L.map('map').setView([lat, lon], 11);
+                // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
+                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                    // Il est toujours bien de laisser le lien vers la source des données
+                    attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
+                    minZoom: 1,
+                    maxZoom: 20
+                }).addTo(macarte);
+            }
+            window.onload = function () {
+                // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
+                initMap();
+            };
+        </script>
+    </body>
+
+
+    <%- include ("footer") %>
