--- a/views/Templates/footer.ejs
+++ b/views/Templates/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="bg-white">
-    <div class="container py-5">
+    <div class="container py-5" id="footer">
       <div class="row py-4">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
             <img src="/logo.jpg" alt="Logo de la SNCF" width=250 height=150/></img>
