--- a/views/style/style.css
+++ b/views/style/style.css
@@ -1,14 +1,25 @@
-
 #map {
   /* la carte DOIT avoir une hauteur sinon elle n'apparaît pas */
   height: 100%;
   width: 100%;
-  position: fixed;
-  z-index: -1;
+  position: absolute;
   margin: 0;
   padding: 0;
 }
 .container{
   padding-top: 50px;
   padding-bottom: 50px;
+}
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
 }
