--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -1,36 +1,41 @@
 <%- include ("header") %>
 
     <body>
-        <div id="map">
-            <!-- Ici s'affichera la carte -->
-        </div>
-        <div class="container">
-            <div class="row centered-form">
-                <div class="col-xs-12 col-sm-8 col-md-4 offset-sm-2 offset-md-4">
-                    <div class="card ">
-                        <div class="card-header">
-                            <h3 class="card-header">Où allez-vous ?</h3>
-                        </div>
-                        <div class="card-block">
-                            <form role="form">
-                                <div class="form-group">
-                                    <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
-                                        class="form-control form-control-sm" placeholder="Départ...">
-                                </div>
-                                <div class="form-group">
-                                    <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
-                                        class="form-control form-control-sm" placeholder="Arrivée...">
-                                </div>
+        <div class="container-fluid h-100">
+            <div class="row h-100">
+                <aside class="col-12 col-md-2 p-0 bg-dark">
+                    <nav class="navbar navbar-expand navbar-dark bg-dark flex-md-column flex-row align-items-start">
+                        <div class="collapse navbar-collapse">
+                            <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                                <!-- Insérez ici le reste de votre menu -->
 
-                                <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search">
+                                <form role="form">
+                                    <div class="form-group">
+                                        <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
+                                            class="form-control form-control-sm" placeholder="Départ...">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
+                                            class="form-control form-control-sm" placeholder="Arrivée...">
+                                    </div>
 
-                            </form>
+                                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search">
+
+                                </form>
+
+                            </ul>
                         </div>
+                    </nav>
+                </aside>
+                
+                <main class="col">
+                    <div id="map">
+                        <!-- Ici s'affichera la carte -->
                     </div>
-                </div>
+
+                </main>
             </div>
         </div>
-
 
         <!-- Fichiers Javascript -->
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
