--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -4,7 +4,8 @@
 
     <div class="container">
       <div class="row centered-form">
-        <div class="col-xs-12 col-sm-8 col-md-4 offset-sm-2 offset-md-4">
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
+          <div class="shadow p-3 mb-5 bg-white">
           <div class="card ">
             <div class="card-header">
               <h3 class="card-header">Inscrivez-vous ...</h3>
@@ -68,6 +69,7 @@
               </form>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
