ajout bg carte.jpg

--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -1,11 +1,12 @@
 <%- include ("header") %>
 
   <body>
+    <div style="background: url(/carte.jpg)" class="page-holder bg-cover">
 
     <div class="container">
       <div class="row centered-form">
         <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
-          <div class="shadow p-3 mb-5 bg-white">
+          <div class="shadow-lg p-3 mb-5 bg-white">
           <div class="card ">
             <div class="card-header">
               <h3 class="card-header">Inscrivez-vous ...</h3>
@@ -71,6 +72,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </body>
 
