--- a/views/style/style.css
+++ b/views/style/style.css
@@ -26,3 +26,11 @@ html, body {
   flex-shrink: 0;
   margin-top: 255px;
 }
+
+.page-holder {
+  min-height: 100vh;
+}
+
+.bg-cover {
+  background-size: cover !important;
+}
