--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -3,77 +3,78 @@
   <body>
     <div style="background: url(/carte.jpg)" class="page-holder bg-cover">
 
-    <div class="container">
-      <div class="row centered-form">
-        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
-          <div class="shadow-lg p-3 mb-5 bg-white">
-          <div class="card ">
-            <div class="card-header">
-              <h3 class="card-header">Inscrivez-vous ...</h3>
-            </div>
-            <div class="card-block">
-              <form role="form">
-                <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6">
-                    <div class="form-group">
-                      <input type="text" name="first_name" id="first_name" class="form-control form-control-sm"
-                        placeholder="First Name">
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-sm-6 col-md-6">
-                    <div class="form-group">
-                      <input type="text" name="last_name" id="last_name" class="form-control form-control-sm"
-                        placeholder="Last Name">
-                    </div>
-                  </div>
+      <div class="container">
+        <div class="row centered-form">
+          <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
+            <div class="shadow p-3 mb-5 bg-white">
+              <div class="card ">
+                <div class="card-header">
+                  <h3 class="card-header">Inscrivez-vous ...</h3>
                 </div>
+                <div class="card-block">
+                  <form role="form">
+                    <div class="row">
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                          <input type="text" name="first_name" id="first_name" class="form-control form-control-sm"
+                            placeholder="First Name">
+                        </div>
+                      </div>
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                          <input type="text" name="last_name" id="last_name" class="form-control form-control-sm"
+                            placeholder="Last Name">
+                        </div>
+                      </div>
+                    </div>
 
-                <div class="form-group">
-                  <input type="email" name="email" id="email" class="form-control form-control-sm" placeholder="Email Address">
-                </div>
-
-                <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
-                      <input type="password" name="password" id="password" class="form-control form-control-sm"
+                      <input type="email" name="email" id="email" class="form-control form-control-sm"
+                        placeholder="Email Address">
+                    </div>
+
+                    <div class="row">
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                          <input type="password" name="password" id="password" class="form-control form-control-sm"
+                            placeholder="Password">
+                        </div>
+                      </div>
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                          <input type="password" name="password_confirmation" id="password_confirmation"
+                            class="form-control form-control-sm" placeholder="Confirm Password">
+                        </div>
+                      </div>
+                    </div>
+
+                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Register">
+
+                  </form>
+                </div>
+                <div class="card-header">
+                  <h3 class="card-header">... Connectez-vous</h3>
+                </div>
+                <div class="card-block">
+                  <form role="form">
+                    <div class="form-group">
+                      <input type="email" name="email" id="user_email" class="form-control form-control-sm"
+                        placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                      <input type="password" name="password" id="user_password" class="form-control form-control-sm"
                         placeholder="Password">
                     </div>
-                  </div>
-                  <div class="col-xs-6 col-sm-6 col-md-6">
-                    <div class="form-group">
-                      <input type="password" name="password_confirmation" id="password_confirmation"
-                        class="form-control form-control-sm" placeholder="Confirm Password">
-                    </div>
-                  </div>
+
+                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Log In">
+
+                  </form>
                 </div>
-
-                <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Register">
-
-              </form>
-            </div>
-            <div class="card-header">
-              <h3 class="card-header">... Connectez-vous</h3>
-            </div>
-            <div class="card-block">
-              <form role="form">
-                <div class="form-group">
-                  <input type="email" name="email" id="user_email" class="form-control form-control-sm"
-                    placeholder="Email Address">
-                </div>
-                <div class="form-group">
-                  <input type="password" name="password" id="user_password" class="form-control form-control-sm"
-                    placeholder="Password">
-                </div>
-
-                <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Log In">
-
-              </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
   </body>
 
   <%- include ("footer") %>
