--- a/views/Templates/footer.ejs
+++ b/views/Templates/footer.ejs
@@ -10,7 +10,7 @@
             <li class="mb-2"><a href="/" class="text-muted">Accueil</a></li>
             <li class="mb-2"><a href="#" class="text-muted">Historique</a></li>
             <li class="mb-2"><a href="/sign" class="text-muted">Sign in/Sign up</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Profil</a></li>
+            <li class="mb-2"><a href="/profil" class="text-muted">Profil</a></li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-3 mb-4 mb-lg-0" >
