--- a/views/Templates/footer.ejs
+++ b/views/Templates/footer.ejs
@@ -8,7 +8,7 @@
           <h6 class="text-uppercase font-weight-bold mb-4">Pages</h6>
           <ul class="list-unstyled mb-0">
             <li class="mb-2"><a href="/" class="text-muted">Accueil</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Historique</a></li>
+            <li class="mb-2"><a href="/history" class="text-muted">Historique</a></li>
             <li class="mb-2"><a href="/sign" class="text-muted">Sign in/Sign up</a></li>
             <li class="mb-2"><a href="/profil" class="text-muted">Profil</a></li>
           </ul>
