--- a/views/Templates/header.ejs
+++ b/views/Templates/header.ejs
@@ -33,7 +33,7 @@
 								<a class="nav-link" href="/" role="button">Accueil</a>
 							</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Historique</a>
+							<a class="nav-link" href="/history">Historique</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/sign" role="button">Sign in/Sign up</a>
