--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -23,7 +23,7 @@
                                         <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
                                             class="form-control form-control-sm" placeholder="Arrivée...">
                                     </div>
-                                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search"/>
+                                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search" />
                                 </form>
                             </div>
                         </div>
@@ -32,32 +32,134 @@
             </div>
         </div>
 
-        <!-- Fichiers Javascript -->
-        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-            crossorigin=""></script>
-        <script type="text/javascript">
-            // On initialise la latitude et la longitude de Paris (centre de la carte)
-            var lat = 48.852969;
-            var lon = 2.349903;
-            var macarte = null;
-            // Fonction d'initialisation de la carte
-            function initMap() {
-                // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-                macarte = L.map('map_accueil').setView([lat, lon], 11);
-                // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
-                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-                    // Il est toujours bien de laisser le lien vers la source des données
-                    attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
-                    minZoom: 1,
-                    maxZoom: 20
-                }).addTo(macarte);
-            }
-            window.onload = function () {
-                // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
-                initMap();
-            };
-        </script>
+        <div class="container" id="history">
+            <div class="row centered">
+                <div
+                    class="col-xs-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2">
+                    <div class="shadow p-3 mb-5 bg-white">
+                        <div class="card-block">
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Départ : Paris
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Destination : Marseille
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="centered row">
+                                <div class="col-xs-8 col-sm-8 col-md-8">
+                                    <div class="form-group">
+                                        Date : 01/04/2021
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group centered">
+                                        Heure de départ : 12h30
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Heure d'arrivée : 16h00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group centered">
+                                        Distance : 660 km
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Prix : 120.35 euros
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="shadow p-3 mb-5 bg-white">
+                        <div class="card-block">
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Départ : Paris
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Destination : Marseille
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-8 col-sm-8 col-md-8">
+                                    <div class="form-group">
+                                        Date : 01/04/2021
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group centered">
+                                        Heure de départ : 14h30
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Heure d'arrivée : 18h00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group centered">
+                                        Distance : 660 km
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        Prix : 103.95 euros
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Fichiers Javascript -->
+            <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+                integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+                crossorigin=""></script>
+            <script type="text/javascript">
+                // On initialise la latitude et la longitude de Paris (centre de la carte)
+                var lat = 48.852969;
+                var lon = 2.349903;
+                var macarte = null;
+                // Fonction d'initialisation de la carte
+                function initMap() {
+                    // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
+                    macarte = L.map('map_accueil').setView([lat, lon], 11);
+                    // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
+                    L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                        // Il est toujours bien de laisser le lien vers la source des données
+                        attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
+                        minZoom: 1,
+                        maxZoom: 20
+                    }).addTo(macarte);
+                }
+                window.onload = function () {
+                    // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
+                    initMap();
+                };
+            </script>
     </body>
 
 
