C'est beau mtn askip

--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -9,15 +9,15 @@
                         class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
                         <div class="shadow p-3 mb-5 bg-white">
                             <div class="card ">
-                                <div class="card-header">
-                                    <div class="text-center">
+                                <!-- <div class="card-header"> -->
+                                    <div class="text-center" style="margin-top: 10px;">
                                         <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar"/>
-                                </div>
+                                <!-- </div> -->
                                 <div class="text-center">
                                     <%= firstname %> <%= lastname %>
                                 </div>
                                 <div>
-                                    <hr style="height:1px;border:none;color:#333;background-color:#333;"/>
+                                    <hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;"/>
                                 </div>
                                 <div class="card-block">
                                     <form role="form">
@@ -42,15 +42,15 @@
                                             </div>
                                         </div>
 
-                                        <input class="btn btn-secondary btn-lg btn-block" type="submit"
+                                        <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit"
                                             value="Save">
 
                                     </form>
                                 </div>
                                 <div>
-                                  <hr style="height:1px;border:none;color:#333;background-color:#333;"/>
+                                  <hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;"/>
                                 </div>
-                                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Erase History">
+                                    <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit" value="Erase History">
                                 </div>
                             </div>
                         </div>
