--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -10,20 +10,20 @@
                     class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-4">
                     <div class="shadow p-3 mb-5 bg-white">
                         <div class="card ">
-                            <div class="card-header">
-                                <h3 class="card-header">Où allez-vous ?</h3>
-                            </div>
+                            <!-- <div class="card-header"> -->
+                                <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Où allez-vous ?</h3>
+                            <!-- </div> -->
                             <div class="card-block">
                                 <form role="form" action="/search">
                                     <div class="form-group">
                                         <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
-                                            class="form-control form-control-sm" placeholder="Départ...">
+                                            class="form-control form-control-sm" placeholder="Départ..." style="color: #8f1338;">
                                     </div>
                                     <div class="form-group">
                                         <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
-                                            class="form-control form-control-sm" placeholder="Arrivée...">
+                                            class="form-control form-control-sm" placeholder="Arrivée..." style="color: #8f1338;">
                                     </div>
-                                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Search" />
+                                    <input class="btn btn-light btn-lg btn-block" type="submit" value="Search" style="background-color: #8f1338;"/>
                                 </form>
                             </div>
                         </div>
