--- a/views/Templates/header.ejs
+++ b/views/Templates/header.ejs
@@ -21,8 +21,8 @@
 
 <header>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-				<a class="navbar-brand" href="/">Rail Wars</a>
+		<nav class="navbar navbar-expand-lg bg-light" style="background-color: #d46cb2;">
+				<a class="navbar-brand" href="/" style="color: #8f1338; font-size: medium;">Rail Wars</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -30,16 +30,16 @@
 					<ul class="navbar-nav ml-auto">
 						
 						<li class="nav-item">
-								<a class="nav-link" href="/" role="button">Accueil</a>
+								<a class="nav-link" href="/" role="button" style="color: #8f1338;">Accueil</a>
 							</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/history">Historique</a>
+							<a class="nav-link" href="/history" style="color: #8f1338;">Historique</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/sign" role="button">Sign in/Sign up</a>
+							<a class="nav-link" href="/sign" role="button" style="color: #8f1338;">Sign in/Sign up</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link" href="/profil">
+								<a class="nav-link" href="/profil" style="color: #8f1338;">
 										Profil
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
 												<path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
