--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -8,9 +8,9 @@
           <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
             <div class="shadow p-3 mb-5 bg-white">
               <div class="card ">
-                <div class="card-header">
-                  <h3 class="card-header">Inscrivez-vous ...</h3>
-                </div>
+                <!-- <div class="card-header"> -->
+                  <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Inscrivez-vous ...</h3>
+                <!-- </div> -->
                 <div class="card-block">
                   <form role="form">
                     <div class="row">
@@ -48,13 +48,13 @@
                       </div>
                     </div>
 
-                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Register">
+                    <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit" value="Register">
 
                   </form>
                 </div>
-                <div class="card-header">
-                  <h3 class="card-header">... Connectez-vous</h3>
-                </div>
+                <!-- <div class="card-header"> -->
+                  <h3 class="card-header" style="background-color: transparent; color: #8f1338;">... Connectez-vous</h3>
+                <!-- </div> -->
                 <div class="card-block">
                   <form role="form">
                     <div class="form-group">
@@ -66,7 +66,7 @@
                         placeholder="Password">
                     </div>
 
-                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Log In">
+                    <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit" value="Log In">
 
                   </form>
                 </div>
