--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -12,7 +12,7 @@
                   <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Inscrivez-vous ...</h3>
                 <!-- </div> -->
                 <div class="card-block">
-                  <form role="form">
+                  <form role="form" action ="/user/sign" method="POST" >
                     <div class="row">
                       <div class="col-xs-6 col-sm-6 col-md-6">
                         <div class="form-group">
