--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -1,15 +1,16 @@
 <%- include ("header") %>
 
-    <body>
-        <div class="container" id="search">
-            <div class="row centered-form" style="width:100 vw; height: 100vh;">
+    <body style="background: url(/carte.jpg)">
+        <div class="container" id="search" >
+            <div class="row centered-form" style="width:100 vw; height: 100vh; ">
                 <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-4">
                     <div class="shadow p-3 mb-5 bg-white" style="margin-top: 25%;">
 
                         <div class="card">
                                 <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Où allez-vous ?</h3>
                             <div class="card-block">
-                                <form role="form" action="/search">
+                                <!-- Formulairepour pour rentrer les données -->
+                                <form role="form" method="GET" action="/search">
                                     <div class="form-group">
                                         <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
                                             class="form-control form-control-sm" placeholder="Départ..." style="color: #8f1338;">
@@ -18,8 +19,9 @@
                                         <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
                                             class="form-control form-control-sm" placeholder="Arrivée..." style="color: #8f1338;">
                                     </div>
-                                    <input class="btn btn-light btn-lg btn-block" type="submit" value="Search" style="background-color: #8f1338;"/>
+                                    <button class="btn btn-light btn-lg btn-block" type="submit" style="background-color: #8f1338;">Search</button>
                                 </form>
+
                             </div>
                         </div>
                     </div>
