Ajout du dynamisme des prix

--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -13,7 +13,7 @@
                                 <form role="form" method="GET" action="/search">
                                     <div class="form-group">
                                         <input type="lieu_depart" name="lieu_depart" id="lieu_depart"
-                                            class="form-control form-control-sm" placeholder="Départ..." style="color: #8f1338;">
+                                            class="form-control form-control-sm" placeholder="Départ..." style="color: #8f1338;" required>
                                     </div>
                                     <div class="form-group">
                                         <input type="lieu_arrivee" name="lieu_arrivee" id="lieu_arrivee"
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-           
+        <script src="/views/script/acceuil.js"> </script>
     </body>
 
 
