Possibilité de supprimer les historiques

--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -50,13 +50,15 @@
                                 <div>
                                   <hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;"/>
                                 </div>
-                                    <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit" value="Erase History">
+                                    <button class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" onclick="erase_history()">Erase History</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <script src="/views/script/profil.js"> </script>
     </body>
 
     <%- include ("footer") %>
